change svg rendering style to fix blurry menu button in Firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -212,3 +212,7 @@ footer {
 .modal figure {
   margin: 0;
 }
+
+svg {
+  shape-rendering: crispEdges;
+}
